--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-switch": "^1.0.3",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
